welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "R" ) => droite();avance();
                         ^BDR2:4: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "L" ) => gauche();avance();
                         ^BDR2:5: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "I" ) => gauche();gauche();avance();
                         ^BDR2:6: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "A" ) => avance();
                         ^BDR2:7: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "B" ) => avance();avance();
                         ^BDR2:8: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "C" ) => avance();avance();avance();
                         ^BDR2:9: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "D" ) => avance();avance();avance();avance();
                         ^BDR2:10: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "E" ) => avance();avance();avance();avance();avance();
                         ^BDR2:11: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "F" ) => avance();avance();avance();avance();avance();avance();
                         ^BDR2:12: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "Z" ) => recule();
                         ^BDR2:13: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "Y" ) => recule();recule();
                         ^BDR2:14: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "X" ) => recule();recule();recule();
                         ^BDR2:15: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "W" ) => recule();recule();recule();recule();
                         ^BDR2:16: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "V" ) => recule();recule();recule();recule();recule();
                         ^BDR2:17: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == "U" ) => recule();recule();recule();recule();recule();recule();
                         ^BDR2:18: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
	case (litMessage == () )  => ()
                         ^